@@ -1,5 +1,7 @@
 == master
 
+* Remove the PluginAWeek namespace
+
 == 0.0.5 / 2008-10-26
 
 * Change how the base module is included to prevent namespacing conflicts
